# hypermodern_python

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml
.github/: CODEOWNERS
app/: main.py
app/config/: env.py
app/controller/: todo.py
app/db_model/: todo.py  user.py
app/db_model/dataclass/: db_config.py
app/entity/: todo.py  user.py
app/middleware/: cors.py
app/repository/todo/: todo.py  todo_sql.py
app/repository/user/: user.py  user_mongo.py  user_sql.py
app/service/: hello_world_service.py  todo.py  user.py
tests/: test_db_config.py
